# Lib_query

./: .gitignore  Lib_query项目结构.txt  README.md  __init__.py  db.py  gui.py  main.py  pyproject.toml  requirements.txt  utils.py
github/: copilot-instructions.md
lib_query/: __init__.py  ctrl.py
lib_query/db/: __init__.py  core.py  impoter.py
lib_query/db/search/: __init__.py  call_num.py  call_num_piece.py  isbn.py  search_base.py  title.py
lib_query/gui/: __init__.py  call_num_piece_tab.py  call_num_tab.py  core_tab.py  core_win.py  isbn_tab.py  style_config.py  title_tab.py
lib_query/gui/tabs/: __init__.py  call_num_piece_tab.py  call_num_tab.py  isbn_tab.py  title_tab.py
old_proj/: db.py  gui.py  main.py
